# video-img-to-ascii

./: CMakeLists.txt  README.md  main.cpp
src/: asciic.cpp  asciic.h  imgasciic.cpp  imgasciic.h
